# Philosopher

./: CMakeLists.txt
philo/: Makefile  init.c  phi.txt  philo.c  routine.c  time_management.c  utils.c
philo/includes/: philo.h
philo/philo.dSYM/Contents/Resources/DWARF/: philo
philo_bonus/: Makefile  clear_bonus.c  init_bonus.c  philo_bonus.c  routine_bonus.c  time_management_bonus.c  utils_bonus.c
philo_bonus/includes/: philo_bonus.h
